081130 cs  glow      Font can be set on node and group level for text and annotations.
081130 cs  glow      Red error color is not affected by gradient property.
090128 cs  xtt       Bugfix in alarmlist acknowledge.
090218 cs  glow      Bugfix for connection with the same source and destination object.
090219 cs  flow      Bugfix in connectionpoint selection. Removed node wasn't removed from selection list.
090219 cs  ge        Bugfix in Ge journal when attribute editor is open on create undo object.
090224 cs  flow      Navigator items wasn't sensitive and correctly drawn to right window border.
090225 cs  xtt       Ampersand in alarmtext cause a blank alarmtext in operator window.
090225 cs  flow      Problem with missing invert circle in postscript plc doc fixed.
090225 cs  xtt       Size check of attribute input and float format changed to %g.
090227 cs  glow      Bugfix in scaled option menu close to lower window border. Event coordinate translation was wrong.
090227 cs  ge        Problem with soiled texts fixed.
090305 cs  glow      Ge color palette fillcolor,bordercolor and textcolor selection changed.
090305 cs  xtt       Trend method not viewed for $PlantHier with a Trend child object.
090306 cs  xtt       Language translation of operator window buttons.
090512 cs  ge        Bugfix in ge editor, navigator palette wasn't destroyed at exit.
090518 cs  xtt       More flexible layout of operator buttons. NoFastAvail not used any more.
090518 cs  xtt       Bugfix in xtt termination. Free in wrong order could cause segfault.
090518 cs  xtt       Advanced user set as default, not set with option -d.
090519 cs  ge        Bugfix in fonts for language se_sv.
090601 cs  ge        New action: SetValue to set a specified value into an attribute.
090625 cs  xtt       Bugfix in eventlist, adding event in a full list could cause segfault.
090625 cs  xtt       Blocklist window title was wrong.